
    API Changes
    Added API method to check if player parties are size capped
    Added API method to grab the level cap of a skill by its PrimarySkillType ENUM definition
    Added API method to check if a skill was being level capped

Version 2.1.30
    Fixed double drops behaving oddly
    DoubleDrop config tables now must contain all things that can possibly be doubled, such as the Ore block, the ore itself, etc.
    Added the following items to the DoubleDrop tables for Mining: Coal, Diamond, Emerald, Glowstone_Dust, Iron_Ingot, Lapis_Lazuli, Nether_Quartz, Redstone, Cobblestone
    Added the following items to the DoubleDrop tables for Herbalism: Beetroot, Carrot, Cocoa_Beans, Melon_Slice, Potatoe

    NOTE: I'm gonna have to blame Bukkit on this one, several API methods I used are actually unfinished and kind of janky. So I hacked something together to make them work.

Version 2.1.29
    Fixed a bug where double drops and triple drops were not activating

Version 2.1.28
    Fixed a bug where Archery could not gain XP

Version 2.1.27
    Fixed an exploit that allowed players to duplicate torches, and rails

Version 2.1.26
    Added new scaling damage buffs to all existing Combat Skills
    Added a new subskill named Stab to Swords
    Fixed a bug where Berserk was not adding 50% damage to attacks
    Changed how Iron Arm damage is calculated (Rank 1 now effectively gives twice the damage bonus it used to, higher ranks have more damage)

    NOTE: Combat skills will be completely configurable in the upcoming 2.2 update, be patient <3

    New Permissions
            - mcmmo.ability.unarmed.unarmedlimitbreak
            - mcmmo.ability.axes.axeslimitbreak
            - mcmmo.ability.archery.archerylimitbreak
            - mcmmo.ability.swords.swordslimitbreak
            - mcmmo.ability.swords.stab

    Notes:
    The new Limit Break subskills are intended to make Prot IV players less tanky and for you to feel more powerful for having high skill level.